<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/widget54"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"    
	    android:background="@drawable/blue960"
	    android:typeface="monospace"
	    >
	    <TextView 	android:id="@+id/heading" 
	    			android:layout_width="fill_parent" 
	    			android:layout_height="wrap_content"
	    			android:text="@string/expense_heading_label"
	    			android:textColor="#ffffff"
	    			android:textStyle="bold"
	    			android:gravity="center_vertical|center_horizontal"
	    			android:padding="3dip" >    			
	    </TextView>
	    <TableLayout android:layout_below="@+id/heading" android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginBottom="10dip" android:layout_height="fill_parent" android:layout_centerInParent="true" android:gravity="center" android:stretchColumns="1">
	    	<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
	            <TextView 	android:textColor="#ffffff" 
	            			android:text="@string/expense_name_label" 
	            			android:layout_width="wrap_content" 
	            			android:id="@+id/textView1" 
	            			android:layout_height="wrap_content"	            			
	            			android:gravity="center_vertical|center_horizontal">
	            </TextView>
	            <EditText 	android:text="" 
	            			android:layout_width="wrap_content" 
	            			android:id="@+id/editText1" 
	            			android:layout_height="wrap_content"> 
	            </EditText>            
	        </TableRow>
	    	<TableRow android:id="@+id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content">
		        <TextView 	android:textColor="#ffffff" 
		        			android:text="@string/expense_date_label" 
		        			android:layout_width="wrap_content" 
		        			android:id="@+id/textView3" 
		        			android:layout_height="wrap_content"
		        			android:gravity="center_vertical|center_horizontal">
		        </TextView>
		        <EditText 	android:text="mm/dd/yyyy" 
	            			android:layout_width="wrap_content" 
	            			android:id="@+id/editText2" 
	            			android:layout_height="wrap_content"
	            			android:gravity="center_vertical|center_horizontal"
	            			> 
	            </EditText>
		    </TableRow>
		    <TableRow android:id="@+id/tableRow2" android:layout_width="fill_parent" android:layout_height="wrap_content">
		        <TextView 	android:textColor="#ffffff" 
		        			android:text="@string/expense_amount_label" 
		        			android:layout_width="wrap_content" 
		        			android:id="@+id/textView4" 
		        			android:layout_height="wrap_content"
		        			android:gravity="center_vertical|center_horizontal">
		        </TextView>
		        <EditText 	android:text="" 
	            			android:layout_width="wrap_content" 
	            			android:id="@+id/editText3" 
	            			android:layout_height="wrap_content"
	            			android:gravity="center_vertical|center_horizontal"> 
	            </EditText>
		    </TableRow>	        
	        <TableRow android:id="@+id/tableRow4" android:layout_width="fill_parent" android:layout_height="wrap_content">
		        <TextView 	android:textColor="#ffffff" 
		        			android:text="@string/expense_category_label" 
		        			android:layout_width="wrap_content" 
		        			android:id="@+id/textView2" 
		        			android:layout_height="wrap_content"
		        			android:gravity="center_vertical|center_horizontal">
		        </TextView>
		        <Spinner 	android:id="@+id/spinner1" 
		        			android:layout_width="wrap_content" 
		        			android:layout_height="wrap_content">
		        </Spinner>
		    </TableRow>
		    <TableRow android:id="@+id/tableRow5" android:layout_width="fill_parent" android:layout_height="wrap_content">
		        <TextView 	android:textColor="#ffffff" 
		        			android:text="@string/expense_new_category_label" 
		        			android:layout_width="wrap_content" 
		        			android:id="@+id/textView5" 
		        			android:layout_height="wrap_content"
		        			android:gravity="center_vertical|center_horizontal">
		        </TextView>
		        <EditText 	android:text="" 
	            			android:layout_width="wrap_content" 
	            			android:id="@+id/editText4" 
	            			android:layout_height="wrap_content"> 
	            </EditText>
		    </TableRow>
		    <TableRow android:id="@+id/tableRow6" android:layout_width="fill_parent" android:layout_height="wrap_content">
		        <TextView />
		        <Button 	android:text="@string/expense_submit_label" 
	            			android:layout_width="wrap_content" 
	            			android:id="@+id/button1" 
	            			android:layout_height="wrap_content"> 
	            </Button>
		    </TableRow>		    
	    </TableLayout>    
	</LinearLayout>
</ScrollView>